Fixed spacing

--- a/styles.scss
+++ b/styles.scss
@@ -254,7 +254,7 @@ h5 {
 	margin-bottom: 6rem;
 	letter-spacing: 1px;
 	padding-top: 5px;
-	margin-top: 3rem;
+	margin-top: 15rem;
 	animation: pulse 3s infinite;
   }
 
